[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ui/utils/resource_value_ui.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/Bitwise.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/ui/utils/param_value_ui.tres" type="StyleBox" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.707107, 0.707107, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 4.0
shadow_color = Color( 0.707107, 0.707107, 0, 0.156863 )
shadow_size = 5
anti_aliasing_size = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.353553, 0.353553, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 4.0
shadow_color = Color( 0.353553, 0.353553, 0, 0.156863 )
shadow_size = 5
anti_aliasing_size = 3

[node name="param_value_ui" type="HBoxContainer"]
margin_right = 177.0
margin_bottom = 41.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
base_style = ExtResource( 3 )
base_font = SubResource( 1 )

[node name="left_center_container" type="CenterContainer" parent="."]
margin_right = 55.0
margin_bottom = 41.0

[node name="param_label" type="Label" parent="left_center_container"]
margin_top = 10.0
margin_right = 55.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "STUB"
uppercase = true

[node name="right_center_container" type="CenterContainer" parent="."]
margin_left = 59.0
margin_right = 109.0
margin_bottom = 41.0

[node name="progress_bar" type="ProgressBar" parent="right_center_container"]
margin_top = 13.0
margin_right = 50.0
margin_bottom = 27.0
rect_min_size = Vector2( 50, 14 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 1.0
value = 0.5
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
